<resources>
    <string name="app_name">ApplicationTeste RM</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>


    <string name="label_name">"Nome: "</string>
    <string name="label_status">Situação:</string>
    <string name="label_gender">Gênero:</string>
    <string name="label_origin">Origem:</string>
    <string name="label_local">Local:</string>
    <string name="label_specie">Espécie:</string>
</resources>