<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background_azul"
    >

<androidx.constraintlayout.widget.ConstraintLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content" >

    <androidx.cardview.widget.CardView
        android:id="@+id/char_image_card"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:cardCornerRadius="40dp"
        android:layout_margin="5dp"
        android:elevation="10dp">

    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/char_image"
        android:layout_width="240dp"
        android:layout_height="240dp"
        android:scaleType="fitCenter"
        app:layout_constraintDimensionRatio="1:1" />

    </androidx.cardview.widget.CardView>

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/label_name"
        android:textStyle="bold"
        android:textColor="@color/white"
        android:layout_margin="@dimen/default_label_margin"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:text="@string/label_name"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/char_image_card"/>

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/text_name"
        android:layout_marginStart="@dimen/default_label_margin"
        android:textColor="@color/white"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toEndOf="@+id/label_name"
        app:layout_constraintTop_toTopOf="@+id/label_name"/>

    <androidx.appcompat.widget.AppCompatTextView
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/label_name"
        android:textColor="@color/white"
        android:id="@+id/label_specie"
        android:textStyle="bold"
        android:layout_margin="@dimen/default_label_margin"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:text="@string/label_specie"/>

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/text_specie"
        android:layout_marginStart="@dimen/default_label_margin"
        android:textColor="@color/white"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toEndOf="@+id/label_specie"
        app:layout_constraintTop_toTopOf="@+id/label_specie"   />

    <androidx.appcompat.widget.AppCompatTextView
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/label_specie"
        android:id="@+id/label_status"
        android:textStyle="bold"
        android:textColor="@color/white"
        android:layout_margin="@dimen/default_label_margin"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:text="@string/label_status" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/text_status"
        android:layout_marginStart="@dimen/default_label_margin"
        android:layout_width="wrap_content"
        android:textColor="@color/white"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toEndOf="@+id/label_status"
        app:layout_constraintTop_toTopOf="@+id/label_status"  />

    <androidx.appcompat.widget.AppCompatTextView
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/label_status"
        android:id="@+id/label_gender"
        android:textStyle="bold"
        android:textColor="@color/white"
        android:layout_margin="@dimen/default_label_margin"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:text="@string/label_gender" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/text_gender"
        android:layout_marginStart="@dimen/default_label_margin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/white"
        app:layout_constraintStart_toEndOf="@+id/label_gender"
        app:layout_constraintTop_toTopOf="@+id/label_gender" />

    <androidx.appcompat.widget.AppCompatTextView
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/label_gender"
        android:id="@+id/label_origin"
        android:textStyle="bold"
        android:layout_margin="@dimen/default_label_margin"
        android:textColor="@color/white"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:text="@string/label_origin" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/text_origin"
        android:layout_marginStart="@dimen/default_label_margin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/white"
        app:layout_constraintStart_toEndOf="@+id/label_origin"
        app:layout_constraintTop_toTopOf="@+id/label_origin"/>

    <androidx.appcompat.widget.AppCompatTextView
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/label_origin"
        android:id="@+id/label_local"
        android:textStyle="bold"
        android:textColor="@color/white"
        android:layout_margin="@dimen/default_label_margin"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:text="@string/label_local" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/text_local"
        android:layout_marginStart="@dimen/default_label_margin"
        android:textColor="@color/white"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toEndOf="@+id/label_local"
        app:layout_constraintTop_toTopOf="@+id/label_local" />

</androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>